# rstore

./: .gitignore  LICENSE  README.md  pyproject.toml  rstore.py
rstore/: __init__.py  _reducer.py  _store.py  redis.py
